--- a/appliformation-js-lite/plop-templates/action.hbs
+++ b/appliformation-js-lite/plop-templates/action.hbs
@@ -1,5 +1,5 @@
 import { Utils } from "hornet-js-utils";
-import { Logger } from "hornet-js-utils/src/logger";
+import { Logger } from "hornet-js-logger/src/logger";
 import { RouteActionService } from "hornet-js-core/src/routes/abstract-routes";
 {{#if createServiceClass}}
 import { {{sevicePageClass}} } from "src/services/data/{{serviceDirectory}}{{creatPathService}}/{{snakeCase seviceDataClass}}";
@@ -7,7 +7,7 @@ import { {{sevicePageClass}} } from "src/services/data/{{serviceDirectory}}{{cre
 import { {{sevicePageClass}} } from "src/services/data/{{unixPathCase serviceFile}}";
 {{/if}}
 
-const logger: Logger = Utils.getLogger("{{> applicationName }}.actions{{packageCase actionDirectory}}{{packageCase creatPathAction}}.{{snakeCase actionClass}}");
+const logger: Logger = Logger.getLogger("{{> applicationName }}.actions{{packageCase actionDirectory}}{{packageCase creatPathAction}}.{{snakeCase actionClass}}");
 
 /**
  * {{actionClassDescription}}
