--- a/appliformation-js-lite/plop-templates/page.hbs
+++ b/appliformation-js-lite/plop-templates/page.hbs
@@ -1,5 +1,5 @@
 import { Utils } from "hornet-js-utils";
-import { Logger } from "hornet-js-utils/src/logger";
+import { Logger } from "hornet-js-logger/src/logger";
 import * as React from "react";
 import { HornetPage } from "hornet-js-react-components/src/widget/component/hornet-page";
 import { HornetComponentProps } from "hornet-js-components/src/component/ihornet-component";
@@ -9,7 +9,7 @@ import { {{sevicePageClass}} } from "src/services/page/{{serviceDirectory}}{{cre
 import { {{sevicePageClass}} } from "src/services/page/{{unixPathCase serviceFile}}";
 {{/if}}
 
-const logger: Logger = Utils.getLogger("{{> applicationName }}.views{{dotCase pageDirectory}}{{packageCase creatPathPage}}.{{snakeCase sevicePageClass}}");
+const logger: Logger = Logger.getLogger("{{> applicationName }}.views{{dotCase pageDirectory}}{{packageCase creatPathPage}}.{{snakeCase sevicePageClass}}");
 
 /**
  * {{pageClassDescription}}
