--- a/appliformation-js-lite/template/404.html
+++ b/appliformation-js-lite/template/404.html
@@ -5,9 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="icon" type="image/png" href="img/logoHornet.png"/>
     <title>Erreur 404</title>
-    <link rel="stylesheet" type="text/css"
-          href="<%=project.static%>hornet-themes-intranet/css/theme.css"/>
-    <link rel="stylesheet" type="text/css" href="<%=project.static%>css/theme.css"/>
+    <link rel="stylesheet" type="text/css" href="<%=project.static%>css/appli.min.css"/>
 </head>
 <body>
 <div id="app">
