--- a/appliformation-js-lite/template/test_template.html
+++ b/appliformation-js-lite/template/test_template.html
@@ -8,8 +8,7 @@
     <script lang="javascript">
         let url = window.location.protocol + "//" +  window.location.host + window.location.pathname.substring(0, window.location.pathname.indexOf("/", 1));
 
-        creatLinkStyle("/<%=project.static%>hornet-themes-intranet/css/theme.css", url);
-        creatLinkStyle("/<%=project.static%>css/theme.css", url);
+        creatLinkStyle("/<%=project.static%>css/appli.min.css", url);
 
 
         function creatLinkStyle(styleUrl, url) {
